SecurityShepherd/security-shepherd-mysql-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: security-shepherd
  creationTimestamp: null
  labels:
    security-shepherd: mysql
    app: security-shepherd-mysql-db
  name: security-shepherd-mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security-shepherd-mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        security-shepherd: mysql
        app: security-shepherd-mysql-db
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: CowSaysMoo
        image: mysql:5.7.26
        imagePullPolicy: "IfNotPresent"
        name: security-shepherd-mysql-db
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: security-shepherd-mysql-db-pv
      restartPolicy: Always
      serviceAccountName: ""
      automountServiceAccountToken: false
      volumes:
      - name: security-shepherd-mysql-db-pv
        persistentVolumeClaim:
          claimName: security-shepherd-mysql-db-pv
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: security-shepherd
  creationTimestamp: null
  labels:
    app: security-shepherd-mysql-db
  name: security-shepherd-mysql-db
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: security-shepherd-mysql-db
  type: ClusterIP
status: {}
