SecurityShepherd/security-shepherd-oauth2-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: security-shepherd
  creationTimestamp: null
  name: security-shepherd-oauth2-proxy
  labels:
    security-shepherd: oauth2-proxy
    app: security-shepherd-oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security-shepherd-oauth2-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        security-shepherd: oauth2-proxy
        app: security-shepherd-oauth2-proxy
    spec:
      containers:
      - args:
        - --provider
        - oidc
        - --oidc-issuer-url
        - [KEYCLOAK URL]
        - --client-id
        - security-shepherd
        - --client-secret
        - $(client_secret)
        - --http-address
        - :8080
        - --upstream
        - https://security-shepherd:8443
        - --cookie-secure
        - "true"
        - --email-domain
        - "*"
        - --cookie-secret
        - $(cookie_secret)
        - --skip-provider-button
        - "true"
        image: quay.io/oauth2-proxy/oauth2-proxy
        imagePullPolicy: ""
        name: oauth2-proxy
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      automountServiceAccountToken: false
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: security-shepherd
  creationTimestamp: null
  labels:
    app: security-shepherd-oauth2-proxy
  name: security-shepherd-oauth2-proxy
spec:
  ports:
  - name: ui
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: security-shepherd-oauth2-proxy
  type: ClusterIP
status: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: security-shepherd-secure
  creationTimestamp: null
  namespace: security-shepherd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`security-shepherd.[MY_DOMAIN]`)
      kind: Rule
      services:
        - name: security-shepherd-oauth2-proxy
          namespace: security-shepherd
          kind: Service
          port: 8080
  tls: {}
