SecurityShepherd/security-shepherd-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: security-shepherd-deny-egress
  namespace: security-shepherd
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  # Default all pods to no egress (except dns)
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: security-shepherd-deny-ingress
  namespace: security-shepherd
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: security-shepherd-oauth2-proxy-allow
  namespace: security-shepherd
spec:
  podSelector:
    matchLabels:
      security-shepherd: oauth2-proxy
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: traefik
  egress:
  - to:
    - podSelector:
        matchLabels:
          security-shepherd: security-shepherd
    ports:
    - protocol: TCP
      port: 8443
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 192.168.0.0/16
        - 172.16.0.0/12
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: security-shepherd-app-allow
  namespace: security-shepherd
spec:
  podSelector:
    matchLabels:
      security-shepherd: security-shepherd
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          security-shepherd: oauth2-proxy
    ports:
    - protocol: TCP
      port: 8443
  egress:
  - to:
    - podSelector:
        matchLabels:
          security-shepherd: mysql
    ports:
    - protocol: TCP
      port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: security-shepherd-mysql-allow
  namespace: security-shepherd
spec:
  podSelector:
    matchLabels:
      security-shepherd: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          security-shepherd: security-shepherd
    ports:
    - protocol: TCP
      port: 3306
